...
        )
    }
}

private val previewApps = listOf(
    InstalledApp(
        name = "Calendar",
        packageName = "app.preview.calendar",
        launchIntent = Intent(),
        user = Process.myUserHandle(),
        isWorkApp = false,
        launchWithLauncherApps = false,
    ),
    InstalledApp(
        name = "Work Calendar",
        packageName = "app.preview.workcalendar",
        launchIntent = Intent(),
        user = Process.myUserHandle(),
        isWorkApp = true,
        launchWithLauncherApps = false,
    ),
...
